--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "node": ">=18.0.0"
   },
   "scripts": {
+    "dev": "npm run generate",
     "generate": "tsc && tsc-alias && node ./dist/src/index.js"
   },
   "repository": {
@@ -25,7 +26,7 @@
   },
   "homepage": "https://github.com/meszaros-lajos-gyorgy/arx-map-ambience-gallery#readme",
   "dependencies": {
-    "arx-level-generator": "^1.0.0-alpha.4",
+    "arx-level-generator": "^1.0.0-alpha.8",
     "seedrandom": "^3.0.5",
     "three": "^0.155.0"
   },
