--- a/.prettierrc
+++ b/.prettierrc
@@ -6,5 +6,6 @@
   "endOfLine": "auto",
   "useTabs": false,
   "tabWidth": 2,
-  "importOrder": ["^node:", "<THIRD_PARTY_MODULES>", "^@/", "^@", "^[./]"]
+  "importOrder": ["^node:", "<THIRD_PARTY_MODULES>", "^@/", "^@", "^[./]"],
+  "plugins": ["@trivago/prettier-plugin-sort-imports"]
 }
