--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "homepage": "https://github.com/meszaros-lajos-gyorgy/arx-map-ambience-gallery#readme",
   "dependencies": {
-    "arx-level-generator": "^1.0.0-alpha.13",
+    "arx-level-generator": "^1.0.1",
     "seedrandom": "^3.0.5",
     "three": "^0.155.0"
   },
