--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "node": ">=18.0.0"
   },
   "scripts": {
-    "dev": "npm run build && npm run generate",
-    "build": "tsc && tsc-alias",
-    "generate": "node ./dist/src/index.js --enable-source-maps"
+    "dev": "npm run generate && npm run rungame",
+    "generate": "tsc && tsc-alias && node -r dotenv/config ./dist/src/index.js",
+    "rungame": "~/projektek/arx/ArxLibertatis/build/arx --loadlevel 1"
   },
   "repository": {
     "type": "git",
@@ -28,12 +28,13 @@
   "homepage": "https://github.com/meszaros-lajos-gyorgy/arx-map-ambience-gallery#readme",
   "dependencies": {
     "arx-level-generator": "^1.0.1",
+    "dotenv": "^16.3.1",
     "seedrandom": "^3.0.5",
     "three": "^0.155.0"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.2.0",
-    "@types/node": "^20.4.8",
+    "@types/node": "^20.4.9",
     "@types/seedrandom": "^3.0.5",
     "@types/three": "^0.155.0",
     "tsc-alias": "^1.8.7",
