feat(seed): let arx-level-generator handle seeds

--- a/.env.sample
+++ b/.env.sample
@@ -7,3 +7,5 @@ levelIdx=1
 # set this to your arx fatalis install folder to
 # be able to run the generated map immediately
 outputDir=C:\\Program\ Files\\Arx\ Libertatis\\
+
+seed=12345
