--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "arx-map-ambience-gallery",
   "version": "1.0.0",
   "description": "A simple Arx Fatalis map for exploring the game's ambiences",
-  "main": "index.js",
+  "main": "src/index.ts",
   "type": "module",
   "engines": {
     "npm": ">=8.0.0",
