--- a/.env.sample
+++ b/.env.sample
@@ -9,3 +9,21 @@ levelIdx=1
 outputDir=C:\\Program\ Files\\Arx\ Libertatis\\
 
 seed=12345
+
+# can be either "normal" or "premium"
+# the default value is "normal"
+variant=normal
+
+# can be either "true" or "false"
+# the default value is "true"
+# if the map has no light entities, then the value will get
+# overriden to be false
+calculateLighting=true
+
+# can be either "production" or "development"
+# the default value is "production"
+mode=production
+
+# points to the pkware-test-files repo's folder
+# default value is "../pkware-test-files"
+originalLevelFiles=../pkware-test-files
