--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "node": ">=18.0.0"
   },
   "scripts": {
-    "dev": "npm run generate && npm run rungame",
-    "generate": "tsc && tsc-alias && node -r dotenv/config ./dist/src/index.js",
-    "rungame": "~/projektek/arx/ArxLibertatis/build/arx --loadlevel 1"
+    "generate": "tsc && tsc-alias && node ./dist/src/index.js",
+    "generate:with-dotenv": "tsc && tsc-alias && node -r dotenv/config ./dist/src/index.js",
+    "rungame": "~/projektek/arx/insanity/ArxLibertatis/build/arx --loadlevel 1",
+    "rungame:noclip": "~/projektek/arx/insanity/ArxLibertatis/build/arx --loadlevel 1 --noclip",
+    "dev": "npm run generate:with-dotenv && npm run rungame",
+    "dev:noclip": "npm run generate:with-dotenv && npm run rungame:noclip",
+    "prod": "export mode=\"production\" && npm run generate:with-dotenv && npm run rungame",
+    "release:normal": "npm run generate"
   },
   "repository": {
     "type": "git",
@@ -27,15 +32,15 @@
   },
   "homepage": "https://github.com/meszaros-lajos-gyorgy/arx-map-ambience-gallery#readme",
   "dependencies": {
-    "arx-level-generator": "^1.1.0",
+    "arx-level-generator": "^1.10.1",
     "dotenv": "^16.3.1",
     "three": "^0.155.0"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.2.0",
-    "@types/node": "^20.4.9",
-    "@types/three": "^0.155.0",
+    "@types/node": "^20.5.6",
+    "@types/three": "^0.155.1",
     "tsc-alias": "^1.8.7",
-    "typescript": "^5.1.6"
+    "typescript": "^5.2.2"
   }
 }
