--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "arx-fatalis"
   ],
   "author": "Lajos Meszaros <m_lajos@hotmail.com>",
-  "license": "GPL-3.0-or-later",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/meszaros-lajos-gyorgy/arx-map-ambience-gallery/issues"
   },
