--- a/.env.sample
+++ b/.env.sample
@@ -16,6 +16,7 @@ outputDir=./output
 
 # the number of the level which will the files be generated into
 # level 1 is the level you go to when starting a new game
+# default value is 1
 levelIdx=1
 
 # this is the folder where you should place all the textures and
@@ -24,28 +25,23 @@ levelIdx=1
 assetsDir=./assets
 
 # can be either "true" or "false"
-# the default value is "true"
 # if the map has no light entities, then the value will get
 # overwritten to be false
+# if set to false, but the map already has lighting information precalculated (like when loading
+# an existing arx level) then the lighting information is kept as is
+# the default value is "true"
 calculateLighting=true
 
-# possible values for Fredlllll's lighting calculator:
-# - "Distance"
-# - "Danae"
-# - "DistanceAngle"
-# - "DistanceAngleShadow"
-# - "DistanceAngleShadowNoTransparency"
-# - "GI"
-# default value is "DistanceAngleShadowNoTransparency"
-lightingCalculatorMode=DistanceAngleShadowNoTransparency
-
 # any string that is used to seed the random number generator
+# default value is a random number between 100.000.000 and 999.999.999
 seed=12345
-
-# can be either "normal" or "premium"
-# the default value is "normal"
-variant=normal
 
 # can be either "production" or "development"
 # the default value is "production"
 mode=production
+
+# Whether to compress the FTS file with pkware after compiling, or keep it uncompressed
+# can be either "true" or "false"
+# the default value is "false"
+# uncompressed FTS is an Arx Libertatis 1.3+ feature, so it should be disabled when releasing a map
+uncompressedFTS=false
