--- a/package.json
+++ b/package.json
@@ -10,13 +10,12 @@
   },
   "scripts": {
     "generate": "tsc && tsc-alias && node ./dist/src/index.js",
-    "generate:with-dotenv": "tsc && tsc-alias && node -r dotenv/config ./dist/src/index.js",
-    "rungame": "~/projektek/arx/insanity/ArxLibertatis/build/arx --loadlevel 1",
-    "rungame:noclip": "~/projektek/arx/insanity/ArxLibertatis/build/arx --loadlevel 1 --noclip",
-    "dev": "npm run generate:with-dotenv && npm run rungame",
-    "dev:noclip": "npm run generate:with-dotenv && npm run rungame:noclip",
-    "prod": "export mode=\"production\" && npm run generate:with-dotenv && npm run rungame",
-    "release:normal": "npm run generate"
+    "rungame": "arx-level-generator --rungame",
+    "rungame:noclip": "arx-level-generator --rungame --noclip",
+    "dev": "npm run generate && npm run rungame",
+    "dev:noclip": "npm run generate && npm run rungame:noclip",
+    "prod": "export mode=\"production\" && npm run generate && npm run rungame",
+    "release": "export uncompressedFTS=\"false\" && export outputDir=\"./output\" && export mode=\"production\" && rm -rf cache && rm -rf output && npm run generate"
   },
   "repository": {
     "type": "git",
@@ -32,14 +31,15 @@
   },
   "homepage": "https://github.com/meszaros-lajos-gyorgy/arx-map-ambience-gallery#readme",
   "dependencies": {
-    "arx-level-generator": "^2.0.0",
-    "three": "^0.156.0"
+    "arx-convert": "^10.0.1",
+    "arx-level-generator": "21.0.0-alpha.11",
+    "three": "^0.167.0"
   },
   "devDependencies": {
-    "@trivago/prettier-plugin-sort-imports": "^4.2.0",
-    "@types/node": "^20.5.9",
-    "@types/three": "^0.155.1",
-    "tsc-alias": "^1.8.7",
-    "typescript": "^5.2.2"
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/node": "^22.1.0",
+    "@types/three": "^0.167.0",
+    "tsc-alias": "^1.8.10",
+    "typescript": "^5.5.4"
   }
 }
